# mgam_datatoolkit

./: .gitignore  .gitmodules  pyproject.toml  readme.md  requirements.txt  setup.py
mgamdata/: DistortionAugment.py  OpenCV_PyTorch_Conversion.py  OpticalFlowAugmentation.py  OpticalFlowVisualization.py  __init__.py  mmeng_module.py  mmpre_module.py  mmseg_module - deprecated.py  mmseg_module.py
mgamdata.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mgamdata/CTGastricCancer2023/: DataBackend.py  DrawFigure.ipynb
mgamdata/SA_Med2D/: DataProvider.py  DatasetBackend.py  DatasetInitialize.py
mgamdata/criterions/: segment.py
mgamdata/dataset/: base.py  base_convert.py  dataset.py
mgamdata/dataset/AbdomenCT_1K/: convert_nii_mha.py  mm_dataset.py
mgamdata/dataset/CTGastricCancer2023/: DataBackend.py  DataProcess.py  convert_dcm_mha.py  lmdb_GastricCancer.py
mgamdata/dataset/CT_ORG/: convert_nii_mha.py  meta.py  mm_dataset.py  precrop_npz.py
mgamdata/dataset/FLARE_2022/: convert_nii_mha.py
mgamdata/dataset/FLARE_2023/: convert_nii_mha.py  meta.py  mm_dataset.py
mgamdata/dataset/FudanTumor/: mm_dataset.py
mgamdata/dataset/GeneralUnsupDataset/: convert_nii_mha.py  precrop_npz.py
mgamdata/dataset/ImageTBAD/: convert_nii_mha.py  mm_dataset.py  precrop_npz.py
mgamdata/dataset/KiTS23/: convert_nii_mha.py
mgamdata/dataset/LUNA16/: convert_mhd_mha.py  mm_dataset.py
mgamdata/dataset/RenJi_Sarcopenia/: L3.py  __init__.py  imageio.py  inference.py  meta.py  mm_dataset.py  request.py
mgamdata/dataset/RoseThyroidCount/: generate_heat_map.py  generate_samples.py  meta.py  mm_dataset.py
mgamdata/dataset/TCGA-LUAD/: convert_dcm_mha.py
mgamdata/dataset/TCGA_Dataset/: convert_to_mha.py
mgamdata/dataset/Totalsegmentator/: AnalyzeDistribution.py  Totalsegmentator.py  __init__.py  convert_nii_mha.py  convert_nii_tiff.py  convert_openmm_dataset.py  meta.py  mm_dataset.py  parse_label_overlap.py  precrop_npz.py
mgamdata/deploy/: ExportModel.py  InferenceService.py  contour.py  request.py  triton_server_client_rengji2d.py
mgamdata/deploy/RenJi_Sarcopenia/: ExportModel.py  demo2D.py  request.py  triton_server_client_rengji2d_v2.py
mgamdata/io/: dcm_toolkit.py  nii_toolkit.py  pt_feat.py  sitk_toolkit.py
mgamdata/mm/: ClassicCT_mha.py  RoseCellCount.py  TestConclude.py  Totalsegmentator.py  UnSupOptFlow.py  __init__.py  experiment.py  inference.py  mmeng_PlugIn.py  mmpre.py  mmpre_PlugIn.py  mmseg_Dev3D.py  mmseg_PlugIn.py  run.py  run_deprecated.py  run_failed_dev_mp.py  runv2.py  sarcopenia_dataset.py
mgamdata/models/: AutoWindow.py  DSNet.py  FastSlow.py  FudanTumor.py  MedNeXt.py  MedNext.py  MoCo.py  ReconSelfSup.py  SelfSup.py  losses.py
mgamdata/models/DconnNet/: DconnNet.py  (+1 more)
mgamdata/process/: ConstructSample.py  GeneralPreProcess.py  LoadBiomedicalData.py  NDArray.py  PreCrop_3D.py  itk_dataset_resample.py  kmeans.py
mgamdata/utils/: ConfigQuickModify.ipynb  DevelopUtils.py  ResampleMha.py  evaluation_mha.py  inference.py  kmeans_postseg.py  search_tool.py
(+20 files in other folders)
