[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mgamdata"
version = "1.7.0.241225"
requires-python = ">= 3.12"
authors = [
  {name = "Yiqin Zhang", email = "312065559@qq.com"},
]
maintainers = [
  {name = "Yiqin Zhang", email = "312065559@qq.com"},
]
description = "mgam's data toolkit for a better world!"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  "monai",
  "openpyxl",
  "pandas",
  "scikit-image",
  "scikit-learn",
  "scipy",
  "SimpleITK",
  "pydicom",
  "pynrrd",
  "nnunetv2",
  "ftfy",
  "regex",
  "pynvml",
  "future",
  "tensorboard",
  "nibabel",
  "orjson",
  "HolisticTraceAnalysis",
  "pylint-django",
  "tensorrt",
  "openslide-python",
  "openslide-bin",
  "h5py",
  "timm",
  "opensdpc",
]

[project.scripts]
mmrun = "mgamdata.mm.run:main"
mmconc = "mgamdata.mm.TestConclude:main"

[tool.setuptools]
packages = ["mgamdata"]
