[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mgamdata"
version = "1.8.4.250115"
requires-python = ">= 3.12"
authors = [
  {name = "Yiqin Zhang", email = "312065559@qq.com"},
]
maintainers = [
  {name = "Yiqin Zhang", email = "312065559@qq.com"},
]
description = "mgam's data toolkit for a better world!"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  "monai",
  "openpyxl",
  "pandas",
  "scikit-image",
  "scikit-learn",
  "scipy",
  "SimpleITK",
  "pydicom",
  "pynrrd",
  "nnunetv2",
  "ftfy",
  "regex",
  "pynvml",
  "future",
  "tensorboard",
  "nibabel",
  "orjson",
  "HolisticTraceAnalysis",
  "pylint-django",
  "openslide-python",
  "openslide-bin",
  "h5py",
  "timm",
  "opensdpc",
]

[project.optional-dependencies]
nvidia = [
  "deepspeed",
  "tensorrt",
]

[project.scripts]
mmrun = "mgamdata.mm.run:main"
mmconc = "mgamdata.mm.TestConclude:main"
precrop = "mgamdata.process.PreCrop_3D:SemiSupervisedMhaCropper3D.main_entry"
itk_resample = "mgamdata.process.itk_dataset_resample:main"

[tool.setuptools]
packages = ["mgamdata"]
